# simple_rover

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: rover_assem_urdf.pc  simple_assem_urdf.pc  simple_assem_urdf3.pc  simple_rover.pc  simple_rover3.pc
devel/share/rover_assem_urdf/cmake/: rover_assem_urdfConfig.cmake
devel/share/simple_assem_urdf/cmake/: simple_assem_urdfConfig.cmake
devel/share/simple_assem_urdf3/cmake/: simple_assem_urdf3Config.cmake
devel/share/simple_rover/cmake/: simple_roverConfig.cmake
devel/share/simple_rover3/cmake/: simple_rover3Config.cmake
src/assy/: CMakeLists.txt  package.xml
src/assy/config/: joint_names_assy.yaml
src/assy/launch/: display.launch  gazebo.launch
src/assy/meshes/: L1.STL  L2.STL  L3.STL  L4.STL  base_link.STL
src/assy/robots/: assy.urdf
src/simple_rover/: CMakeLists.txt  package.xml
src/simple_rover/config/: joint_names_simple_rover.yaml
src/simple_rover/launch/: display.launch  gazebo.launch
src/simple_rover/meshes/: base_link.STL  left_bogie_link.STL  left_front_wheel_link.STL  left_middle_wheel_link.STL  left_rear_wheel_link.STL  left_rocker_link.STL  right_bogie_link.STL  right_front_wheel_link.STL  right_middle_wheel_link.STL  right_rear_wheel_link.STL  right_rocker_link.STL
src/simple_rover/robots/: simple_rover.urdf  working_urdf_backup
